# kafka-streams-dashboards

./: .gitignore  NOTES.txt  README.md  build.gradle  build.gradle.kts  gradle.properties  index.html  p.py  settings.gradle  settings.gradle.kts
analytics/: Dockerfile  build.gradle  build.gradle.kts  run.sh
applications/: .env  README.md  analytics-1.0.tar  analytics.properties  docker-compose.yml  streams.properties
applications-sasl/: .env  create-credentials.sh  docker-compose.yml  jmx-exporter-config.yml  prometheus_setup.sh  publisher-1.0.tar  streams.properties
applications-ssl/: .env  docker-compose.yml  jmx-exporter-config.yml  streams-1.0.tar
builder/: build.gradle  build.gradle.kts  run.sh
certificates/: .srl  clear-all.sh  copy-keystores.sh  create-all.sh  create-ca.sh  create-cert.sh  create-certs.sh  create-intermediate.sh  create-keystore.sh  create-keystores.sh  env.sh
cluster-1/: .env  docker-compose.yml
cluster-3ctrls/: .env  docker-compose.yml
cluster-cm/: .env  docker-compose.yml
cluster-hybrid/: .env  docker-compose.yml
cluster-lb/: .env  docker-compose.yml  network.sh
cluster-native/: .env  docker-compose.yml
cluster-sasl-oauth/: .env  04-keycloak-clients.sh  04-keycloak-clients.sh.bk  04-keycloak-clients.sh.bk2  05-keycloak-clients.sh  c.p  client.properties  client.properties.bk  client.properties.bk1  create-acls.sh  docker-compose.yml  keycloak-init-old.sh  keycloak-init.sh  setup-keycloak.sh  test-kafka-oauth.sh  test-keycloak-oauth.sh
consumers/rust/producer/rust/: Cargo.toml
consumers/rust/producer/rust/src/: main.rs
(+383 files in other folders)
